force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/VCG_CPQ_Quote_Product_Pricing_Result__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Quote Product Pricing Result</label>
    <nameField>
        <displayFormat>QPR{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCG CPQ Quote Product Pricing Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>