force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Access_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Access_Sequence__c</fullName>
    <label>Access Sequence</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>