force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <label>Assign To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>