force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Calculation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Summary__c</fullName>
    <label>Calculation Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>