force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>