force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Product Group Name</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>