force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <description>Product Line Type</description>
    <label>Line Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>