force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Lookup_Result_Value__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Result_Value__c</fullName>
    <label>Lookup Result Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>