force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Lookup_Result_Value_String__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Result_Value_String__c</fullName>
    <description>Result value if it is a string</description>
    <label>Lookup Result Value String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>