force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Pricing_Override__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Override</label>
    <referenceTo>VCG_CPQ_Pricing_Override__c</referenceTo>
    <relationshipLabel>Pricing Results</relationshipLabel>
    <relationshipName>Pricing_Results</relationshipName>
    <type>Lookup</type>
</CustomField>