force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Pricing_Procedure_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Procedure_Sequence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Procedure Sequence</label>
    <referenceTo>VCG_CPQ_Pricing_Procedure_Sequence__c</referenceTo>
    <relationshipLabel>VCG CPQ Quote Product Pricing Results</relationshipLabel>
    <relationshipName>VCG_CPQ_Quote_Product_Pricing_Results</relationshipName>
    <type>Lookup</type>
</CustomField>