force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Quote_Product__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product__c</fullName>
    <label>Quote Product</label>
    <referenceTo>VCG_CPQ_Quote_Product__c</referenceTo>
    <relationshipName>Pricing_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>