force-app/main/default/objects/VCG_CPQ_Quote_Product_Pricing_Result__c/fields/Result_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Result_Value_Date__c</fullName>
    <label>Result Value Date</label>
    <type>Date</type>
</CustomField>